# STAR

./: Figure.ipynb  Pipeline.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Pipeline-checkpoint.ipynb
all_class/: Graph_cluster.py  get_df.py  get_df_full_Heavy.py  get_pgen.py  output_HC.py  output_MC.py  v_nucl.py
data_test/: GFRAL_1.xlsx  Test.tsv  mabs_scores.csv  mery_scores.csv
output/: df_read_test.tsv
score_scripts/: SASA_oracle.py  camsol.tsv  compute_scores_main.py  get_mery_seqs.py  hic.csv  hic_data.py  mabs_score.csv  mery_seqs.tsv  mery_seqs_score.csv  requirements.txt  sasa_nanonet.py  sasa_tok.py  small_model.py  tras_seqs_score.csv
score_scripts/model_parameters/: small_SASA.pt
